--- a/chrome_ext/popup.html
+++ b/chrome_ext/popup.html
@@ -1,127 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Social Profile Quick Launcher</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link
-      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-      rel="stylesheet"
-      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
-      crossorigin="anonymous"
-    />
-    <style>
-      /* Modal Structure */
-
-      html,
-      body {
-        font-family: "Open Sans", sans-serif;
-        font-size: 14px;
-        margin: 0;
-        /* min-height: 80px; */
-        padding: 0;
-        width: 80px;
-        text-align: center;
-      }
-
-      h1 {
-        font-family: "Menlo", monospace;
-        font-size: 22px;
-        font-weight: 400;
-        margin: 0;
-        color: #2f5876;
-      }
-
-      a:link,
-      a:visited {
-        color: #000000;
-        outline: 0;
-        text-decoration: none;
-      }
-
-      img {
-        width: 30px;
-      }
-
-      .modal-header {
-        align-items: center;
-        border-bottom: 0.5px solid #dadada;
-      }
-
-      .modal-content {
-        padding: 0 22px;
-      }
-
-      .modal-icons {
-        border-top: 0.5px solid #dadada;
-        height: 60px;
-        width: 100%;
-      }
-
-      .logo {
-        padding: 16px;
-      }
-
-      .logo-icon {
-        vertical-align: text-bottom;
-        margin-right: 12px;
-      }
-
-      .flex-container {
-        display: flex;
-        justify-content: space-between;
-        padding: 10px 22px;
-      }
-
-      .flex {
-        opacity: 1;
-        transition: opacity 0.2s ease-in-out;
-        width: 120px;
-      }
-
-      .flex:hover {
-        opacity: 0.4;
-      }
-
-      .flex .fa {
-        font-size: 40px;
-        color: #3c797b;
-      }
-      .btn {
-        color: #fff !important;
-        border-radius: 0.25rem;
-        padding: 0.375rem 0.75rem;
-        line-height: 1rem;
-        font-size: 1rem;
-        text-align: center;
-        vertical-align: middle;
-        background-color: #007bff;
-        border: 1px solid 007bff;
-        margin-top: 0.25rem;
-        margin-bottom: 0.25rem;
-        box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.3);
-      }
-      .btn:hover {
-        color: #fff;
-        background-color: #0069d9;
-        border-color: #0062cc;
-      }
-      .flex a div {
-        visibility: hidden;
-      }
-      .flex:hover {
-        cursor: pointer;
-      }
-      .flex:hover div {
-        visibility: visible;
-      }
-    </style>
+    <title>Context Menu Status</title>
   </head>
-
   <body>
-    I love u!
+    <p style="color: red">I love u!</p>
   </body>
 </html>
